Fix issues with line overflows with PDF snipits in list results
https://www.pivotaltracker.com/story/show/34482531

--- a/public/templates/en/css/dynamic_css.tpl.css
+++ b/public/templates/en/css/dynamic_css.tpl.css
@@ -1551,6 +1551,7 @@ margin-bottom: 1em;
 
 .snip {
 	font-family:Verdana,Arial,Helvetica,sans-serif;font-size:60%;font-style:normal;font-weight:normal;
+    word-wrap: break-word;
 }
 
 .snip em {
